# xkoranate-ce-python

./: .gitignore  LICENSE  NOTICE.md  PORTING.md  README.md  ROADMAP.md  build_app.bat  build_app.sh  launcher.py  mkdocs.yml  pyproject.toml  xkoranate.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: building-an-event.md  faq.md  getting-started.md  index.md  rp-bonuses.md  settings.md  table-generator.md
sports/baseball/: baseball_6innings.xml
sports/basketball/: basketball_nbascoring.xml  basketball_xkoranate.xml
sports/fieldhockey/: fieldhockey_nsfs.xml  fieldhockey_nsfs_et.xml  fieldhockey_nsfs_gg.xml  fieldhockey_nsfs_penalties.xml
sports/gaelicgames/: gaelicfootball_nsfs.xml
sports/icehockey/: icehockey_nsfs.xml
sports/rugball/: rugball_nsfs.xml
sports/rugbyleague/: rugbyleague_nsfs.xml
tests/: conftest.py  integration_test.py  lisa_paradigm_test.py
tests/unit/: test_athlete.py  test_bbcode.py  test_event.py  test_exceptions.py  test_group.py  test_result.py  test_rng.py  test_rplist.py  test_signuplist.py  test_variant.py
xkoranate/: __init__.py  __main__.py  abstractoptionswidget.py  abstracttreewidget.py  application.py  athlete.py  bbcode.py  centralwidget.py  crashlog.py  event.py  exceptions.py  group.py  icons.py  main.py  mainwindow.py  navigationwidget.py  paths.py  result.py  rng.py  rplist.py  signuplist.py  sport.py  startlist.py  theme.py  thinsplitter.py  treewidget.py  variant.py
xkoranate/competitions/: abstractcompetition.py  (+7 more)
(+114 files in other folders)
