[project]
name = "xkoranate-ce"
version = "0.4.0"
description = "xkoranate Community Edition — sports scorinator for NS Sports (Python port)"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "qt-material>=2.17",
    "qtawesome>=1.3",
]

[project.gui-scripts]
xkoranate = "xkoranate.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["xkoranate*"] } }

[tool.setuptools.package-data]
xkoranate = ["icons/*.png", "icons/*.icns"]
